--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!--Proxima Nova font family-->
   <!--<link href="https://cdn.jsdelivr.net/npm/font-proxima-nova@1.0.1/style.min.css" rel="stylesheet">-->
 
-  <title>Clube Consulfarma</title>
+  <title>AmePet</title>
 </head>
 
 <body>
