add: trocar favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+  <link rel="icon" type="image/svg+xml" href="/src/assets/images/petpass_small_white-v1.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- ReCaptcha -->
@@ -12,7 +12,7 @@
   <!--Proxima Nova font family-->
   <!--<link href="https://cdn.jsdelivr.net/npm/font-proxima-nova@1.0.1/style.min.css" rel="stylesheet">-->
 
-  <title>AmePet</title>
+  <title>PetPass</title>
 </head>
 
 <body>
